<resources>
    <string name="arg">Navigate home</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120001">Navigate up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120002">More options</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120003">Done</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120004">See all</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120005">Choose an app</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120006">OFF</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120007">ON</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120008">Alt+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120009">Ctrl+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12000a">delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12000b">enter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12000c">Function+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12000d">Meta+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12000e">Shift+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12000f">space</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120010">Sym+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120011">Menu+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120012">Search…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120013">Clear query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120014">Search query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120015">Search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120016">Submit query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120017">Voice search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120018">Share with</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120019">Share with %s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12001a">Collapse</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12001b">+ 关注</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12001c">粉絲</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12001d">获赞</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12001e">演員名稱</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12001f">進入APP</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120020">%1$s s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120021">查看詳情</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120022">返佣</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120023">累計賺钱</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120024">一部手机 即享日入萬元</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120025">今日賺钱</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120026">我的好友</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120027">去钱包查看我的余額</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120028">好友人數：%1$s人</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120029">消费时间</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12002a">返佣现金</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12002b">總业績</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12002c">androidx.startup</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12002d">极速浏览器</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12002e">智能计算器</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12002f">闹钟</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120030">快乐健身</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120031">潮人穿搭</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120032">G头条</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120033">跑步计时器</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120034">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120035">探秘</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120036">" "<Data>以下内容由&lt;font color=#31f475>【%1$s】&lt;/font>支持，依照千万暗网用户口味样本，推荐出的&lt;font color=#31f475> %2$s部 &lt;/font>至尊级暗网黑料 </Data></string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120037">Adapter is NULL!</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120038">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120039">Expand halfway</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12003a">点击加载更多</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12003b">没有更多数据</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12003c">加载失败，请点我重试</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12003d">正在加载中...</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12003e">Characters entered %1$d of %2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12003f">Character limit exceeded %1$d of %2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120040">%1$d/%2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120041">Chip text</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120042">Clear text</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120043">展开%1$s条回复</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120044">全部</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120045">关注成功</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120046">确认绑定</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120047">取消</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120048">查看全部</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120049">複製成功</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12004a">刪除</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12004b">編輯</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12004c">收起</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12004d">我知道了</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12004e">榜单</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12004f">更多</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120050">新</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120051">支付成功</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120052">確定</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120053">展开</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120054">提現</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120055">元</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120056">G币余额</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120057">今日还可上传：%1$s/%2$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120058">创作中心-赚G币换现金</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120059">点击上传作品</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12005a">发布500部</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12005b">领取？？</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12005c">领取100G币</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12005d">领取200G币</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12005e">G币换现金</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12005f">G币换现金</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120060">历史收入</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120061">管理我的合集</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120062">管理我的作品</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120063">我的粉丝</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120064">我的收益比例</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120065">发布100部</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120066">分享我的个人主页</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120067">受邀好友立即成为你的粉丝，且坐享巨额充值返佣！</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120068">今日收入</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120069">发布200部</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12006a">提升创作收益与每日创作数量</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12006b">上传列表（%1$s）</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12006c">发布0部</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12006d">CalendarView</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12006e">1钻石=%1$s元人民币</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12006f">%1$s名粉絲</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120070">導演資料</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120071">導演</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120072"><Data>享&lt;font color=#31f475>%1$s&lt;/font>好友消费返现！ </Data></string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120073">Error</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120074">兌換中心</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120075">確認兌換</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120076">兌換明細</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120077">兌換中…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120078">兌換失敗</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120079">請輸入兌換碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12007a">" "<Data> 最高享&lt;b>&lt;font color=#31f475>%1$s&lt;/font>&lt;/b>换现比例 </Data>" "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12007b">" "<Data> 享&lt;b>&lt;font color=#31f475>%1$s&lt;/font>&lt;/b>换现比例 </Data>" "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12007c">"兌換規則

1.每張兌換碼僅限使用一次
2.切勿頻繁嘗試兌換，如頻繁驗證系統將限制兌換"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12007d">兌換成功</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12007e">Enable subtitles</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12007f">Disable subtitles</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120080">%1$.2fx</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1200be">Fri</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120119">確認登录密碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12011b">忘記密碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12011e">請再次輸入不低於6位數的登录密碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12011f">請輸入不低於6位數的登录密碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120120">請輸入发送到手机的驗證碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120122">未收到驗證碼？</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12012c">設置登录密碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120131">驗證碼</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120165">Select AM or PM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120171">AM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120175">PM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1201a1">Mon</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120232">取消</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120237">确定</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12023c">原图</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12023f">编辑</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120252">拍照</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120256">预览</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120259">提示</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12025b">是否保存图片至手机？</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12025e">录视频</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120282">"0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!£$%^*()~=#{}[];':,./?/*-_+&lt;>@&amp;"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120286">Sat</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12028b">取消</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12028c">拍照</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f12028d">从相册选择</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120333">Sun</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120334">Thu</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120338">Tue</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f120373">Wed</string>
</resources>