<?xml version="1.0" encoding="utf-8"?>
<merge android:orientation="horizontal" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d0" android:background="#ffffffff" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:minHeight="40.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120333" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1201a1" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120338" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120373" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120334" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f1200be" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120286" android:layout_weight="1.0" />
</merge>