<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0701c7"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d6" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0701c6" style="?android:progressBarStyleSmall" />
        <TextView android:textSize="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0703e8" android:textColor="@android:color/black" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0701c6" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12003d" />
    </LinearLayout>
    <FrameLayout android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d5" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0aec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12003c" />
    </FrameLayout>
    <FrameLayout android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d3" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="@android:color/darker_gray" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12003a" />
    </FrameLayout>
    <FrameLayout android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04d4" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="@android:color/darker_gray" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12003b" />
    </FrameLayout>
</FrameLayout>