<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/APKTOOL_DUPLICATE_color_0x7f06017b" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <a.E android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a074b" android:layout_width="fill_parent" android:layout_height="wrap_content" app:APKTOOL_DUPLICATE_attr_0x7f04033d="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f0405c8="@string/APKTOOL_DUPLICATE_string_0x7f12011b" />
    <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0915" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="41.0dip" android:text="已发送验证码到\n164****5436手机" android:layout_marginStart="38.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040339="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a074b" />
    <TextView android:textSize="12.0dip" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f06007d" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0912" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120122" android:layout_marginStart="38.0dip" android:layout_marginEnd="85.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040325="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f040339="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0915" />
    <TextView android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0a90" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120131" app:APKTOOL_DUPLICATE_attr_0x7f040339="@id/APKTOOL_DUPLICATE_id_0x7f0a0915" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0912" />
    <EditText android:textSize="12.0dip" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:textColorHint="@color/APKTOOL_DUPLICATE_color_0x7f060101" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a024f" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08023e" android:layout_width="0.0dip" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:hint="@string/APKTOOL_DUPLICATE_string_0x7f120120" android:singleLine="true" android:maxLength="6" android:inputType="number" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="38.0dip" android:layout_marginEnd="38.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040325="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f040339="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0a90" />
    <TextView android:textSize="12.0dip" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f06007d" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a09ec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="重新发送" android:layout_marginEnd="20.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04031f="@id/APKTOOL_DUPLICATE_id_0x7f0a024f" app:APKTOOL_DUPLICATE_attr_0x7f040325="@id/APKTOOL_DUPLICATE_id_0x7f0a024f" app:APKTOOL_DUPLICATE_attr_0x7f04033d="@id/APKTOOL_DUPLICATE_id_0x7f0a024f" />
    <TextView android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0a24" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12012c" app:APKTOOL_DUPLICATE_attr_0x7f040339="@id/APKTOOL_DUPLICATE_id_0x7f0a0915" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a024f" />
    <EditText android:textSize="12.0dip" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:textColorHint="@color/APKTOOL_DUPLICATE_color_0x7f060101" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0246" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08023e" android:layout_width="0.0dip" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:hint="@string/APKTOOL_DUPLICATE_string_0x7f12011f" android:singleLine="true" android:digits="@string/APKTOOL_DUPLICATE_string_0x7f120282" android:inputType="textPassword" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="38.0dip" android:layout_marginEnd="38.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040325="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f040339="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0a24" />
    <ImageView android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a03fb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/APKTOOL_DUPLICATE_mipmap_0x7f0f0137" android:layout_marginEnd="20.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04031f="@id/APKTOOL_DUPLICATE_id_0x7f0a0246" app:APKTOOL_DUPLICATE_attr_0x7f040325="@id/APKTOOL_DUPLICATE_id_0x7f0a0246" app:APKTOOL_DUPLICATE_attr_0x7f04033d="@id/APKTOOL_DUPLICATE_id_0x7f0a0246" />
    <TextView android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0a23" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120119" app:APKTOOL_DUPLICATE_attr_0x7f040339="@id/APKTOOL_DUPLICATE_id_0x7f0a0915" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0246" />
    <EditText android:textSize="12.0dip" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060084" android:textColorHint="@color/APKTOOL_DUPLICATE_color_0x7f060101" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0247" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08023e" android:layout_width="0.0dip" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:hint="@string/APKTOOL_DUPLICATE_string_0x7f12011e" android:singleLine="true" android:digits="@string/APKTOOL_DUPLICATE_string_0x7f120282" android:inputType="textPassword" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="38.0dip" android:layout_marginEnd="38.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040325="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f040339="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0a23" />
    <TextView android:textSize="14.0dip" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060416" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0911" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f0801df" android:layout_width="141.0dip" android:layout_height="40.0dip" android:layout_marginTop="50.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120052" app:APKTOOL_DUPLICATE_attr_0x7f040325="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f040339="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f04033c="@id/APKTOOL_DUPLICATE_id_0x7f0a0247" />
</androidx.constraintlayout.widget.ConstraintLayout>