<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f080121" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603c5" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0a57" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120259" />
    <TextView android:textSize="15.0sp" android:textColor="#ff53575e" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0adf" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12025b" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a0a57" />
    <View android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0095" android:background="@color/APKTOOL_DUPLICATE_color_0x7f0603bd" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a0adf" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a0095">
        <Button android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603a9" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a00a4" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f080114" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120232" android:layout_weight="1.0" />
        <View android:background="@color/APKTOOL_DUPLICATE_color_0x7f0603bd" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603b2" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a00a5" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f080117" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120237" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>