<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04eb" android:visibility="gone" android:layout_width="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0702f0" android:layout_height="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0702ee" android:contentDescription="@string/APKTOOL_DUPLICATE_string_0x7f120165" android:layout_marginStart="@dimen/APKTOOL_DUPLICATE_dimen_0x7f0702ef" app:APKTOOL_DUPLICATE_attr_0x7f0400df="@id/APKTOOL_DUPLICATE_id_0x7f0a04e9" app:APKTOOL_DUPLICATE_attr_0x7f040338="@id/APKTOOL_DUPLICATE_id_0x7f0a04e6" app:APKTOOL_DUPLICATE_attr_0x7f04033d="APKTOOL_DUPLICATE_id_0x7f0a0572" app:APKTOOL_DUPLICATE_attr_0x7f0404ad="true" app:APKTOOL_DUPLICATE_attr_0x7f0404d3="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04e9" android:layout_width="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120171" android:insetTop="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f0404b3="?APKTOOL_DUPLICATE_attr_0x7f0404b2" style="?APKTOOL_DUPLICATE_attr_0x7f040391" />
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a04ea" android:layout_width="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120175" android:insetBottom="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f0404b3="?APKTOOL_DUPLICATE_attr_0x7f0404b2" style="?APKTOOL_DUPLICATE_attr_0x7f040391" />
</com.google.android.material.button.MaterialButtonToggleGroup>