<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.luck.picture.lib.widget.MediumBoldTextView android:enabled="false" android:textSize="14.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603b4" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a059b" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120256" android:layout_centerVertical="true" />
    <com.luck.picture.lib.widget.MediumBoldTextView android:textSize="14.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603d0" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0599" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12023f" android:layout_centerVertical="true" />
    <CheckBox android:textSize="14.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603d0" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a00b4" android:background="@color/APKTOOL_DUPLICATE_color_0x7f0603cd" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/APKTOOL_DUPLICATE_drawable_0x7f080142" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12023c" android:includeFontPadding="false" android:layout_centerInParent="true" android:paddingStart="5.0dip" />
</merge>