<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603ae" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a059a" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08013e" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120252" />
    <View android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0758" android:background="@color/APKTOOL_DUPLICATE_color_0x7f0603bd" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a059a" />
    <TextView android:textSize="14.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603ae" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a05a0" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08013e" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f12025e" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a0758" />
    <TextView android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0b4d" android:background="@color/APKTOOL_DUPLICATE_color_0x7f0603bd" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a05a0" />
    <TextView android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0095" android:background="@color/APKTOOL_DUPLICATE_color_0x7f0603bd" android:layout_width="fill_parent" android:layout_height="6.0dip" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a0b4d" />
    <TextView android:textSize="14.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f0603ae" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0597" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08013e" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f120232" android:layout_below="@id/APKTOOL_DUPLICATE_id_0x7f0a0095" />
</RelativeLayout>